@@ -1,57 +1,0 @@
-<Root>
-  <menu>
-    <submenu name="File" _label="_File">
-
-        <menuitem name="FileCloseWin" verb=""
-        pixtype="pixbuf" _label="_Close" accel="*Control*w"/>
-
-    </submenu>
-
-    <submenu name="Edit" _label="_Edit">
-
-        <menuitem name="EditSelectAll" verb=""
-        _label="Select _All"/>
-
-        <menuitem name="EditInvertSelection" verb=""
-        _label="_Invert Selection"/>
-
-    </submenu>
-
-    <placeholder name="Component">
-
-      <submenu name="Folder" _label="F_older">
-
-        <menuitem name="SubscribeFolder" verb=""
-        _label="Subscribe"/>
-
-        <menuitem name="UnsubscribeFolder" verb=""
-        _label="Unsubscribe"/>
-
-      </submenu>
-    </placeholder>
-  </menu>
-
-  <dockitem name="Searchbar" relief="none" behavior="exclusive">
-    <control name="FolderSearch"/>
-
-  </dockitem>
-
-  <dockitem name="Toolbar" relief="none" behavior="exclusive">
-
-    <toolitem name="SubscribeFolder" verb=""
-    _label="Subscribe" _tip="Add folder to your list of subscribed folders"
-    pixtype="pixbuf"/>
-
-    <toolitem name="UnsubscribeFolder" verb=""
-    _label="Unsubscribe" _tip="Remove folder from your list of subscribed folders"
-    pixtype="pixbuf"/>
-
-    <separator f=""/>
-
-    <toolitem name="RefreshList" verb=""
-    _label="Refresh List" _tip="Refresh List of Folders"
-    pixtype="pixbuf"/>
-
-  </dockitem>
-
-</Root>
